# miniGHAPI.py

./: ReadMe.md  pyproject.toml
.ci/: pythonPackagesToInstallFromGit.txt
.github/workflows/: CI.yml
drafts/: ToDo.md
miniGHAPI/: APICore.py  Actions.py  GHActionsEnv.py  GitHubAPI.py  __init__.py  __main__.py  idConvert.py  undocumented.py  utils.py
tests/: tests.py
tests/mockedFiles/: event.json
